clusters/my-cluster/dragonfly-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dragonfly
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dragonfly
  template:
    metadata:
      labels:
        app: dragonfly
    spec:
      containers:
        - name: dragonfly
          image: docker.dragonflydb.io/dragonflydb/dragonfly
          args: ["--dir=/data"]
          volumeMounts:
            - mountPath: /data
              name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: dragonfly-pvc
