clusters/my-cluster/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: frontend
          image: ghcr.io/gallad51/lnkubernetes-test/frontend:1.0.17 # {"$imagepolicy": "flux-system:frontend"}
          ports:
            - containerPort: 80
