clusters/my-cluster/dragonfly-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dragonfly-service
spec:
  selector:
    app: dragonfly
  ports:
    - port: 6379
      targetPort: 6379
