clusters/my-cluster/metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metrics-service
  namespace: default
spec:
  selector:
    app: metrics
  ports:
    - port: 80
      targetPort: 3000
